Added batchVote test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "watch": "tsc --watch",
     "build": "tsc",
-    "test": "npx jest"
+    "test": "npx jest",
+    "test:batchVote": "npx jest BatchVote.test.ts"
   },
   "author": "Kazuaki Ishiguro <gurokazu@gmail.com> (https://kazuaki.dev)",
   "license": "ISC",
