--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "circom": "^0.5.30",
     "circomlib": "^0.2.4",
     "cream-circuits": "^0.1.1",
+    "ffjavascript": "^0.2.30",
     "jest": "^26.5.3",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
